# PoRW

./: LICENSE  MANIFEST.in  README.md  TODO.md  launch_ui.py  pyproject.toml  run_pors_node.sh  run_pors_node_v2.sh  run_pors_storage_node.sh  run_porw_mining.sh  run_porw_mining_node.sh  run_porw_node.sh  run_porw_node_v2.sh  run_server.py  run_web_interface.sh  setup.py
PoRW BC/: License  PoRW.md  TODO  pyproject.toml  readme.md
PoRW BC/docs/: api.rst  architecture.rst  conf.py  index.rst
PoRW BC/scripts/: init_db.py  run_dev.sh
PoRW BC/src/porw_blockchain/: config.py
PoRW BC/src/porw_blockchain/core/: consensus.py  crypto_utils.py  models.py  protein_folding.py  structures.py  validation.py
PoRW BC/src/porw_blockchain/node/: p2p.py  sync.py
PoRW BC/src/porw_blockchain/rpc/: main.py  schemas.py
PoRW BC/src/porw_blockchain/rpc/routers/: blocks.py
PoRW BC/src/porw_blockchain/storage/: crud.py  database.py  models.py
PoRW BC/tests/: conftest.py  test_core.py  test_storage_crud.py
cloud/: README.md
cloud/aws/: README.md  cloudformation.yaml
cloud/azure/: README.md  arm-template.json
cloud/azure/scripts/: setup-blockchain-node.sh  setup-mining-node.sh  setup-storage-node.sh
cloud/gcp/: README.md  deployment-manager.yaml
kubernetes/: README.md  deployment.yaml  kustomization.yaml  mining-node.yaml  storage-node.yaml  web-interface.yaml
packaging/: README.md  build_binary.py
packaging/binary/: README.md
sdk/: README.md
sdk/javascript/: README.md  package.json  tsconfig.json
sdk/javascript/src/: client.ts  hardware.ts  index.ts  types.ts  wallet.ts
sdk/javascript/src/utils/: crypto.ts
sdk/python/: README.md  setup.py
sdk/python/src/porw_blockchain/: __init__.py  client.py  types.py
src/porw_blockchain/api/: server.py
src/porw_blockchain/contracts/: __init__.py  api.py  manager.py  models.py  transaction.py  vm.py
src/porw_blockchain/contracts/examples/: crowdfunding.py  token.json  token.py
src/porw_blockchain/core/: blockchain.py  consensus.py  structures.py  wallet.py
src/porw_blockchain/explorer/: __init__.py  api.py  models.py  router.py  visualization.py
src/porw_blockchain/mining/: __init__.py  miner.py
src/porw_blockchain/privacy/: __init__.py  confidential_transactions.py  encrypted_memo.py  mixing.py  stealth_address.py  zkp.py  zkp_applications.py
src/porw_blockchain/protein/: mining.py  mining_cli.py
src/porw_blockchain/rpc/: app.py
src/porw_blockchain/storage/: database.py  node.py
src/porw_blockchain/storage/pors/: failsafe.py
src/porw_blockchain/update/: __init__.py  checker.py  downloader.py  installer.py  manager.py  verifier.py
src/porw_blockchain/wallet/: __init__.py  contacts.py  hardware.py  hardware_methods.py  labels.py  main.py  mixing.py  multisig.py  privacy.py  qrcode.py  recurring.py  stealth.py  transaction.py  zkp.py
src/porw_blockchain/web/: __init__.py  app.py  filters.py  simple_app.py
src/porw_blockchain/web/routes/: explorer.py
src/porw_blockchain/web/static/css/: contracts.css  protein_data.css  style.css
src/porw_blockchain/web/static/js/: main.js  node-controls.js
src/porw_blockchain/web/templates/: base.html  contact_detail.html  contact_edit.html  contacts.html  contract_deploy.html  contract_detail.html  contract_interact.html  contracts.html  dashboard.html  index.html  mining.html  mixing.html  mixing_session.html  multisig.html  multisig_transaction.html  multisig_wallet.html  protein_data.html  protein_detail.html  recurring.html  recurring_detail.html  recurring_edit.html  science.html  stealth.html  storage.html  transaction.html  transaction_label_detail.html  transaction_label_edit.html  transaction_labels.html  wallet.html  zkp.html
src/porw_blockchain/web/templates/explorer/: address.html  block.html  index.html  protein.html  storage_node.html  transaction.html
tests/: test_performance.py
